# KeyOS

./: .gitignore  Console  appdialog.ui
Console/: config.json  packer.py  pyproject.toml  qtlaunch.py  run_app.py  run_desktop.py  switch
Console/app/: __init__.py
Console/app/home/: views.py
Console/app/static/css/: cur_style.css  style.css
Console/app/templates/: base.html
Console/app/templates/page/home/: applaunching.html  general-settings.html  index.html  transparent.html
image/: Readme.md  build  create-image.sh  create-rootfs.sh
image/ansible/: jetson.yaml
install/: .main.pyc.swp  README.md  config.pak  dialog.ui  install  keyos-install-cli.py  keyos-install.py  main.py  main.ui  main.ui.save  pyproject.toml  sudo.sh
install/configs/bspwm/: bspwmrc  bspwmrcold
install/configs/polybar/: .conf.swp  confff.ini  config  config.ini  config2.ini
install/configs/polybar/sessions/: sessionfile
install/configs/sxhkd/: sxhkdrc  sxhkdrc.save
install/configs/touchegg/: touchegg.conf
install/keyos/: askpass  bind  config.json  open_settings.py  open_settings.py.save  runash  settings.ui  unbind
install/keyos/themes/snow/: config.json
keyos/: config.json  ezconf.py  open_settings.py  runash
keyos/themes/slate/: config.json  theme.css
pap.d/: INSTALL  Makefile  main.cpp  papd
pap.d/etc/pap.d/: config
pap.d/libs/: calls.cpp  daemonize.c  display.cpp  serial.cpp  usbctl.c
