[tool.poetry]
name = "surveybackend"
version = "0.1.0"
description = ""
authors = ["repl.it user <replituser@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
flask-wtf = "^0.14.3"
wtforms = "^2.3.3"
flask-socketio = "^5.0.1"
PyQt5 = "^5.15.4"
PyQtWebEngine = "^5.15.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
