[tool.poetry]
name = "KeyOS-Addons-Install"
version = "0.1.0"
description = "A simple script/UI to install the KeyOS core."
authors = ["Artur Z. <github: HUSKI3>"]

[tool.poetry.dependencies]
python = "^3.8"
PyQt5 = "^5.15.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
